# quizdown

./: .gitignore  Cargo.toml  README.md
.github/workflows/: manylinux.yml  osx.yml  rust.yml
cffi/: Cargo.toml  README.md  build.sh  dev-requirements.txt  package.sh  quizdown_cffi.py  requirements.txt
cffi/quizdown/: __init__.py  __main__.py  qti_format.py
cffi/quizdown/templates/: __init__.py  qti-quiz.j2
cffi/quizdown_cffi/: __init__.py  __main__.py
cffi/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: colors.md
examples/blackboard-qti/: imsmanifest.xml
examples/blackboard-qti/g33f7a0baeb3b414ebad6dcd2801c8e76/: assessment_meta.xml
lib/: Cargo.toml
lib/src/: head.html  html.rs  lib.rs  moodlexml.rs  parsing.rs  qti.rs  render.rs
python/: 01.html  01.moodle  Cargo.toml  build.sh  dev-requirements.txt  package.sh
python/quizdown/: __init__.py  types.py
python/quizdown/templates/: qti-manifest.j2  qti-quiz-meta.j2
python/tests/: test_no_crash.py
quizdown/: Cargo.toml
quizdown/src/: lib.rs  parsing.rs
src/: lib.rs  parsing.rs
wasm/: Cargo.toml  flask-server.py  index.html
wasm/src/: lib.rs
