[package]
name = "quizdown"
version = "0.2.0"
authors = ["John Foley <johnf@middlebury.edu>"]
readme = "../README.md"
description = "A markdown subset for quickly making multiple-choice questions."
homepage = "https://github.com/jjfiv/quizdown"
publish = false
edition = "2018"

[lib]
name = "quizdown"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = "1"
serde_json = "1"
serde_derive = "1"
quizdown_lib = {path = "../lib"}

[package.metadata.maturin.scripts]
quizdown = "quizdown.__main__"

[package.metadata.maturin]
requires-dist = ["cffi"]
classifier = [
  "Programming Language :: Python :: 3.5",
  "Operating System :: OS Independent",
]
