[package]
name = "quizdown_lib"
version = "0.1.0"
authors = ["John Foley <jjfoley@smith.edu>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.7"
thiserror = "1"
serde = "1"
serde_derive = "1"
xmlwriter = "0.1"
syntect = { version = "4.2", default-features = false, features = ["default-fancy"]}