[package]
name = "quizdown"
version = "0.3.2"
authors = ["John Foley <johnf@middlebury.edu>"]
readme = "../README.md"
description = "A markdown subset for quickly making multiple-choice questions."
homepage = "https://github.com/jjfiv/quizdown"
publish = false
edition = "2018"

[lib]
name = "quizdown"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
quizdown_lib = {path = "../lib"}
pyo3 = {version="0.13", features=["extension-module", "abi3-py36"]}


[package.metadata.maturin]
requires-dist = ["attrs", "jinja2"]
classifier = [
  "Programming Language :: Python :: 3.6",
  "Operating System :: OS Independent",
]
